--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
 </script>
 	<form>
 		<label for="name">Name</label>
-		<input type="text" id="name" placeholder="name">
+		<input type="text" id="name" placeholder="Name">
 		<br>
 		<label for="phone">Phone Number</label>
-		<input type="text" id="phone" placeholder="phone number">
+		<input type="text" id="phone" placeholder="phone Number">
 		<br>
 		<label for="address">Address</label>
 		<input type="text" id="address" placeholder="Address">
@@ -30,7 +30,7 @@
 			<option>3</option>
 		</select>
 <!-- 		<label for="submit">Submit</label> -->
-		<input type="submit" id="submit" value="submit">
+		<button type="submit" id="submit" value="submit">Submit</button>
 	</form>
 
 </body>
