--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 			<option>3</option>
 		</select>
 <!-- 		<label for="submit">Submit</label> -->
-		<button type="submit" id="submit" value="submit">Submit</button>
+		<button type="submit" id="submit" value="Submit">Submit</button>
 	</form>
 
 </body>
