--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 		<input type="text" id="name" placeholder="Name">
 		<br>
 		<label for="phone">Phone Number</label>
-		<input type="number" id="phone" placeholder="phoneNumber">
+		<input type="number" id="phone" placeholder="Phone Number">
 		<br>
 		<label for="address">Address</label>
 		<input type="text" id="address" placeholder="Address">
